app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */
body,
select,
form input,
.search-style {
  font-family: "Calibri", Arial, Helvetica, sans-serif;
}

select,
form input {
  font-size: 16px;
}

select,
textarea,
form input[type=text] {
  width: 150px;
}

form {
  /* display: flex; */
}

body {
  min-width: 700px;
  min-height: 560px;
}

td {
  font-size: 18px;
  padding: 15px;
}

table {
  padding: 10px;
  margin: auto;
  width: 60%;
}

.profile-page-preference-table table {
  margin: 0px 0px 40px 0px;
  padding: 0px;
  /* margin: 0px 50px 0px 0px;
  padding: 0px 40px 0px 0px; */
  width: 20%;
}

.center-it {
}

.full-page {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  background-color: rgb(42, 224, 255);
  padding: 20px 0;
  border-radius: 10px;
}

.inner-page {
  width: 75%;
  background-color: white;
  border-radius: 12px;
  padding: 10px 15px 20px;
}

th.header {
  background-color: rgba(115, 234, 255, 1);
  border-radius: 5px;
  border-style: solid;
  border-color: white;
  border-width: 2px;
  padding: 10px;
  font-size: 20px;
  color: white;
  text-align: center;
}

/* td {
  Assigning min-width here will prevent the weird overlap issue
  but it doesn't make the content flexible.
  min-width: 200px;
} */

.button {
  -webkit-appearance: none;
  -moz-appearance: none;
  background-color: rgb(255, 74, 43);
  border-radius: 4px;
  border-style: none;
  padding: 6px 10px;
  text-decoration: none;
  color: white;
  font-size: 18px;
  margin: 0 10px;
  box-shadow: 3px 3px 1px rgba(0,0,0,0.19);
  white-space: nowrap;
}

.form-input-element {
  margin: 20px 10px;
}

/* .full-form {
} */

.page-title,
.individual-page-title {
  display: inline-block;
  padding-left: 10px;
  width: 50%;
}

.page-header-title-button { /*This is centering the page title and "add new" buttons */
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

.individual-page-title {
  padding-left: 30px;
  margin-left: 20px;
}

.individual-page-pic {
  padding-left: 15px;
}

.add-new-link {
  font-weight: bold;
}

.create-preference-choices {
  padding: 15px 0;
}

.create-preference-button {
  margin: auto;
}

.preference-page-inner {
  padding-bottom: 45px;
}

.show-likes,
.show-dislikes {
  margin: 10px 0;
}

.footer-link {
  margin: 0 20px;
  padding: 6px 10px;
  border-radius: 4px;
  color: white;
  font-size: 18px;
  text-decoration: none;
}

.additional-info {
  white-space: pre-line;
}

.filter-header,
.search-header {
  font-weight: bold;
  font-size: 18px;
  margin: 5px 10px;
}

.search-filter,
.individual-page-title {
  display: flex;
  align-items: center;
  justify-content: center;
}

.search-button,
.filter-button {
  margin-top: 10px;
}


.error-explanation {
  color: rgb(255, 74, 43);
  font-style: italic;
}

.app-footer {
  background-color: rgba(42, 224, 255, 1);
  border-radius: 10px;
  border-style: solid;
  border-color: white;
  border-width: 2px;
  height: 75px;
  margin-top: 10px;
  text-align: center;
}

@media only screen
  and (max-width : 980px) {
  .app-footer {
    position: fixed;
    top: 0;
    width: 98%;
  }

  .footer-link {
    font-size: 1.8em;
  }

  .full-page {
    margin-top: 95px;
    font-size: 1.5em;
  }

  .inner-page {
    width: 90%;
  }

  table {
    width: 90%;
  }

  td,
  th.header {
    font-size: 1.3em;
  }

  .page-title,
  .individual-page-title {
    padding-left: 0;
  }

  html .button {
    font-size: 28px;
  }

  .search-header,
  .filter-header {
    font-size: 24px;
  }

  select,
  textarea,
  form input[type=text] {
    font-size: 24px;
  }

  /* .page-header-title-button {
    font-size: 1.3em;
  }

  .button {
    font-size: 0.8em;
  }

  .search-filter .button {
    font-size: 1.3em;
  }

  form .button {
    font-size: 1em;
  } */
}

.error-message {
  color: rgb(255, 74, 43);
}

